# Multimodel-fraudlens

./: .gitignore  Dockerfile  README.md  allfiles.txt  app.py  dis.txt  docker-compose.yml  entrypoint.sh  main.py  pdf_text.txt  pyproject.toml  requirements.txt
configs/: default.yaml
dashboard/: app.js  index.html  style.css
docs/: EVALUATION_PLAN.md  FraudLens_IEEE_Report.aux  FraudLens_IEEE_Report.md  FraudLens_IEEE_Report.out  FraudLens_IEEE_Report.tex  FraudLens_Technical_Blueprint.md  MACBOOK_M4_GUIDE.md  references.bib  references_expanded.bib
fraudlens.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: setup.ipynb  setup_executed.ipynb
results/: .gitkeep
runs/: events.out.tfevents.1776295970.Harshals-MacBook-Air.local.53806.0
runs/loss_train/: events.out.tfevents.1776296383.Harshals-MacBook-Air.local.53806.1
runs/loss_val/: events.out.tfevents.1776296383.Harshals-MacBook-Air.local.53806.2
src/: __init__.py  config.py  inference.py
src/data/: __init__.py  dataset.py  download_data.py  generate_synthetic.py  image_dataset.py  multimodal_dataset.py  synthesizer.py  tabular_dataset.py  text_dataset.py
src/explain/: captum_explainer.py
src/models/: __init__.py  fraudlens.py  fusion.py  image_branch.py  tabular_branch.py  text_branch.py
src/training/: __init__.py  losses.py  metrics.py  train.py  trainer.py
ui/: README.md
